added link to tournament page

--- a/app/application/templates/homepage.html
+++ b/app/application/templates/homepage.html
@@ -60,7 +60,7 @@
       <nav>
         <ul>
           <li><a href="biography.html">Biography</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="{{ base_url }}/tournament">Prisoners' Dilemma Tournament</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
